feat: RabbitMQ asenkron BSS motoru, Redis caching, Global Security ve Logback kurumsal altyapısı entegre edildi